--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!-- style is how you add internal css rules to your html -->
     <style>
         html {
-            background-image: radial-gradient(circle at 2.02% 80.05%, #73379c, transparent 100%), radial-gradient(circle at 97.98% 89.96%, #7e3030, transparent 100%), radial-gradient(circle at 50% 50%, #2a60a2, #1d6486 100%);
+            background-image: radial-gradient(circle at 2.02% 80.05%, #6C8ABB, transparent 100%), radial-gradient(circle at 97.98% 89.96%, #8EF9F3, transparent 100%), radial-gradient(circle at 50% 50%, #9AC4F8, #CFFCFF 100%);
             background-attachment: fixed;
             background-size: cover;
             color: #eee;
