--- a/index.html
+++ b/index.html
@@ -116,17 +116,17 @@
         <!-- bullet list with items that include a link to a new page -->
         <ul>
             <li>
-                <strong><a href="https://lcc-adm.github.io/web-demo/text.html" target="_blank">text.html</a></strong> - A recipe on how to make chilidogs (basic text elements).
+                <strong><a href="text.html" target="_blank">text.html</a></strong> - A recipe on how to make chilidogs (basic text elements).
             </li>
             <li>
-                <strong><a href="https://lcc-adm.github.io/web-demo/images.html" target="_blank">images.html</a></strong>
+                <strong><a href="images.html" target="_blank">images.html</a></strong>
                 - Loading images and styling them using css
             </li>
             <li>
-                <strong><a href="https://lcc-adm.github.io/web-demo/boxes.html" target="_blank">boxes.html</a></strong> - Creating boxes in html and styling them using css
+                <strong><a href="boxes.html" target="_blank">boxes.html</a></strong> - Creating boxes in html and styling them using css
             </li>
             <li>
-                <strong><a href="https://lcc-adm.github.io/web-demo/position.html" target="_blank">position.html</a></strong> - Positioning and floating elements in a web page
+                <strong><a href="position.html" target="_blank">position.html</a></strong> - Positioning and floating elements in a web page
             </li>
         </ul>
     </main>
