--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
             <li>
                 <strong><a href="position.html" target="_blank">position.html</a></strong> - Positioning and floating elements in a web page
             </li>
+            <li>
+                <strong><a href="seahorse.html" target="_blank">text.html</a></strong> - A fun site full of seahorse facts!.
+            </li>
         </ul>
     </main>
 
