--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     <main>
         <!-- introduction text -->
         <p>
-            Here are the links for each assignment.
+            Here are the links for each assignment I've cried over.
         </p>
 
         <!-- bullet list with items that include a link to a new page -->
@@ -119,8 +119,7 @@
                 <strong><a href="text.html" target="_blank">text.html</a></strong> - A recipe on how to make chilidogs (basic text elements).
             </li>
             <li>
-                <strong><a href="images.html" target="_blank">images.html</a></strong>
-                - Loading images and styling them using css
+                <strong><a href="images.html" target="_blank">images.html</a></strong> - Loading images and styling them using css
             </li>
             <li>
                 <strong><a href="boxes.html" target="_blank">boxes.html</a></strong> - Creating boxes in html and styling them using css
@@ -129,7 +128,7 @@
                 <strong><a href="position.html" target="_blank">position.html</a></strong> - Positioning and floating elements in a web page
             </li>
             <li>
-                <strong><a href="seahorse.html" target="_blank">text.html</a></strong> - A fun site full of seahorse facts!.
+                <strong><a href="seahorse.html" target="_blank">text.html</a></strong> - A fun site full of seahorse facts!
             </li>
         </ul>
     </main>
