--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <strong><a href="position.html" target="_blank">position.html</a></strong> - Positioning and floating elements in a web page
             </li>
             <li>
-                <strong><a href="seahorse.html" target="_blank">text.html</a></strong> - A fun site full of seahorse facts!
+                <strong><a href="seahorse.html" target="_blank">seahorse.html</a></strong> - A fun site full of seahorse facts!
             </li>
         </ul>
     </main>
