--- a/index.html
+++ b/index.html
@@ -130,6 +130,12 @@
             <li>
                 <strong><a href="seahorse.html" target="_blank">seahorse.html</a></strong> - A fun site full of seahorse facts!
             </li>
+            <li>
+                <strong><a href="table.html" target="_blank">seahorse.html</a></strong> - A table listing the best villagers in Animal Crossing
+            </li>
+            <li>
+                <strong><a href="transform.html" target="_blank">seahorse.html</a></strong> - A site on crack!
+            </li>
         </ul>
     </main>
 
