--- a/seahorse.html
+++ b/seahorse.html
@@ -9,7 +9,7 @@
 <head>
 
   <meta charset="utf-8">
-  <title>seahorse serenity</title>
+  <title>Seahorse Facts</title>
 
   <link rel="shortcut icon" href="favicon (4).ico" type="image/x-icon">
   <link rel="icon" href="favicon (4).ico" type="image/x-icon">
@@ -132,7 +132,7 @@ nav a:hover {background: #25A18E;}
 <body>
   <header class="clearfix">
     <div id="headline">
-      <h1>Seahorses</h1>
+      <h1>Seahorse Serenity</h1>
     </div>
     <figure>
         <img id="headerImg" src="Images/seahorse.jpg" alt="Yellow seahorse" />
