--- a/index.html
+++ b/index.html
@@ -131,10 +131,10 @@
                 <strong><a href="seahorse.html" target="_blank">seahorse.html</a></strong> - A fun site full of seahorse facts!
             </li>
             <li>
-                <strong><a href="table.html" target="_blank">seahorse.html</a></strong> - A table listing the best villagers in Animal Crossing
+                <strong><a href="table.html" target="_blank">table.html</a></strong> - A table listing the best and worst villagers in Animal Crossing
             </li>
             <li>
-                <strong><a href="transform.html" target="_blank">seahorse.html</a></strong> - A site on crack!
+                <strong><a href="transform.html" target="_blank">transform.html</a></strong> - A site on crack!
             </li>
         </ul>
     </main>
