--- a/table.html
+++ b/table.html
@@ -200,7 +200,7 @@ td:hover {
     
     <tr><td id="elise">Elise</td>
         <td id="civic_essence">Civic</td>
-        <td>Elise is one of the ugliest bitches on Animal Crossing. She has giant red cat glasses that don't match the sytyle of her shirt, and a giant MOLE. Like this bitch really said I'm gonna be like Marilyn MonMOLE today. I also hate the name Elise. I've never met a nice Elise so this APE deserves to get dragged just for her name. And that's on PERIODT.</td></tr>
+        <td>Elise is one of the ugliest bitches on Animal Crossing. She has giant red cat glasses that don't match the style of her shirt, and a giant MOLE. Like this bitch really said I'm gonna be like Marilyn MonMOLE today. I also hate the name Elise. I've never met a nice Elise so this APE deserves to get dragged just for her name. And that's on PERIODT.</td></tr>
     
      <tr><td id="vesta">Vesta</td>
         <td id="rustic_essence">Rustic</td>
