--- a/index.html
+++ b/index.html
@@ -136,6 +136,12 @@
             <li>
                 <strong><a href="transform.html" target="_blank">transform.html</a></strong> - A site on crack!
             </li>
+            <li>
+                <strong><a href="animation.html" target="_blank">animation.html</a></strong> - A shitty animation
+            </li>
+            <li>
+                <strong><a href=".html" target="_blank">.html</a></strong> - A mini site on Beau
+            </li>
         </ul>
     </main>
 
