--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <strong><a href="animation.html" target="_blank">animation.html</a></strong> - A shitty animation
             </li>
             <li>
-                <strong><a href=".html" target="_blank">.html</a></strong> - A mini site on Beau
+                <strong><a href="template.html" target="_blank">template.html</a></strong> - A mini site on my top 5 favorite songs from my top 3 favorite arists.
             </li>
         </ul>
     </main>
