--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@
             <li>
                 <strong><a href="template.html" target="_blank">template.html</a></strong> - A mini site on my top 5 favorite songs from my top 3 favorite arists.
             </li>
+            
+             <li>
+                <strong><a href="https://sites.google.com/mail.lcc.edu/arts173portfolio/home?authuser=1" target="_blank">Arts 173 Portfolio</a></strong> - Arts 173 web portfolio
+            </li>
         </ul>
     </main>
 
